--- a/apm-begin/.vscode/settings.json
+++ b/apm-begin/.vscode/settings.json
@@ -4,4 +4,5 @@
   // "editor.quickSuggestionsDelay": 1000,
   //"editor.hover.enabled": false,
   // "editor.parameterHints": false,
+  "editor.minimap.enabled": false,
 }
